Add standard_flashes helper. Add application layout. Fix broken stories.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,3 +9,5 @@
                                  <%= link_to "Sign up", signup_path, { :title => "Create an account" } %></div>
   <% end -%>
 </div>
+
+<%= standard_flashes %>
