--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Sign up as a new user</h1>
+<%= standard_flashes %>
 <% @person.password = @person.password_confirmation = nil %>
 
 <%= error_messages_for :person %>
